--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -4,6 +4,7 @@ $color-calipso: #41D9D9;
 $color-blanco: #ffffff;
 $color-negro: #000000;
 $color-fondo: #f1f1f1;
+$color-rojo: #ff0000;
 
 //Variables de fuentes
 $fuente: "Poppins", sans-serif;
@@ -16,7 +17,6 @@ $grande: 24px;
 //Variables de peso
 $light: 300;
 $regular: 400;
-$medium: 500;
 $bold: 700;
 $extra-bold: 900;
 
