--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -31,11 +31,11 @@
       }
     }
 
-    .cont-copy{
+    .cont-copy {
       width: 600px;
       display: flex;
       flex-direction: column;
-      
+
       p {
         text-align: center;
         color: $color-blanco;
@@ -90,12 +90,12 @@
           padding: 4px 6px;
           background-color: $color-calipso;
           transition: all 0.3s ease-in-out;
-          
+
           &:hover {
             transform: scale(1.01);
             filter: drop-shadow(0px 0px 5px #0000004d);
           }
-          
+
           & {
             text-decoration: none;
             font-size: $normal;
@@ -115,6 +115,7 @@
       a {
         text-decoration: none;
         color: $color-blanco;
+        font-weight: $bold;
         margin-bottom: 10px;
       }
     }
