--- a/scss/partials/_mixin.scss
+++ b/scss/partials/_mixin.scss
@@ -51,6 +51,26 @@
   }
 }
 
+@mixin btn-cancelar {
+  border: none;
+  border-radius: $radius-l;
+  background-color: $color-rojo;
+  padding: 10px 15px;
+  transition: all 0.3s ease-in-out;
+
+  &:hover {
+    transform: scale(1.03);
+    filter: drop-shadow(0px 0px 5px #0000004d);
+  }
+
+  & {
+    text-decoration: none;
+    font-size: $normal;
+    font-weight: $bold;
+    color: $color-blanco;
+  }
+}
+
 @mixin hover {
   &:hover {
     color: $color-calipso;
