--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,4 +6,6 @@
 @import "./partials/ofertas";
 @import "./partials/productos";
 @import "./partials/modal";
-@import "./partials/footer"
+@import "./partials/footer";
+
+@import "./partials/mq";
