--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -10,6 +10,7 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+    margin-top: 14px;
 
     .cont-paginas ul {
       list-style: none;
