--- a/scss/partials/_modal.scss
+++ b/scss/partials/_modal.scss
@@ -208,6 +208,7 @@
   padding: 30px;
   color: $color-negro;
   border-radius: $radius-xl;
+  overflow-y: auto;
 
   .titulo {
     font-size: 32px;
@@ -238,7 +239,6 @@
   p {
     margin-top: 50px;
     text-align: end;
-    font-size: $normal;
     font-weight: $bold;
   }
 
@@ -283,7 +283,7 @@
       gap: 30px;
 
       .campo-formulario {
-        width: 400;
+        width: 400px;
 
         .campo-entrada {
           display: flex;
