--- a/scss/partials/_ofertas.scss
+++ b/scss/partials/_ofertas.scss
@@ -32,12 +32,14 @@
         font-weight: $extra-bold;
         text-transform: uppercase;
         margin-bottom: 30px;
+        text-wrap: balance;
 
       }
 
       p {
         font-size: $grande;
         text-align: center;
+        text-wrap: balance;
 
         &:nth-of-type(1) {
           font-weight: $extra-bold;
@@ -94,7 +96,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        
+
         h2 {
           font-size: $grande;
           font-weight: $extra-bold;
