--- a/scss/partials/_productos.scss
+++ b/scss/partials/_productos.scss
@@ -2,7 +2,8 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  
+  align-items: center;
+
   .cont-productos-card {
     width: 1200px;
     display: flex;
@@ -21,7 +22,8 @@
     padding: 30px;
     margin-bottom: 30px;
     border-radius: $radius-l;
-    filter: drop-shadow(0px 0px 10px #00000033);;
+    filter: drop-shadow(0px 0px 10px #00000033);
+    ;
 
     img {
       height: 400px;
@@ -55,10 +57,10 @@
         @include btn-mas-info;
       }
     }
-    
+
     .productos-card-btn {
       margin-top: auto;
-      
+
       button {
         @include btn-mas-info;
       }
